WIP for audio block yay. There are some random stopgaps, like using the gamespeed block to hold the audio as a PoC. But you get the idea. It's super close.

--- a/appengine/heroes/style.css
+++ b/appengine/heroes/style.css
@@ -1,4 +1,4 @@
-html, body{
+.fill_height{
   height: 100vh;
   overflow:hidden;
 }
